fix: mermaid svg text cutoff

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -370,6 +370,10 @@ table {
 
   svg {
     @apply p-4 bg-white rounded shadow overflow-hidden;
+
+    foreignObject {
+      overflow: visible;
+    }
   }
 
   rect, polygon {
